user controller creation

--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -10,9 +10,9 @@
 				<div class="jumbotron mt-5 mx-auto">
 					<h1 class="display-3">BIT Project - 2019</h1>
 					<p class="lead">School Management System </p>
-					<h4>WP/NG/DAVID DE SILVA JUNIOR SECONDARY SCHOOL <br/> PEELLAWATHTHA <br/>ANDIAMBALAMA</h4>
+					<h4>WP/NG/DAVID DE SILVA JUNIOR SECONDARY SCHOOL <br/> PEELLAWATHTHA <br/> ANDIAMBALAMA </h4>
 					<p class="lead">
-						<a class="btn btn-primary btn-lg" href="{{ app.url }}/themes/{{ app.theme }}/user/login.html" role="button">Login Panel</a>
+						<a class="btn btn-primary btn-lg mt-5" href="{{ app.url }}/themes/{{ app.theme }}/user/login.html" role="button">Login Panel</a>
 					</p>
 				</div>
 
