--- a/themes/default/user/login.html
+++ b/themes/default/user/login.html
@@ -1,8 +1,17 @@
+<html>
 {{ template.header|raw }}
 <body>
 
-<div class="container-fluid login-body">hi</div>
-    
-{{ template.header|raw }}
+<div class="container-fluid"> 
+    <div class="container">
+        <div class="row">
+            <p> Hello </p>
+        </div>
+    </div>
+</div>
+
+
+
+{{ template.footer|raw }}
 </body>
 </html>
