admin panel view file created

--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -3,7 +3,7 @@
 <body>
 
 	<div class="container-fluid">
-		<div class="container">
+		<div class="container index">
 			<div class="row">
 
 
@@ -12,7 +12,7 @@
 					<p class="lead">School Management System </p>
 					<h4>WP/NG/DAVID DE SILVA JUNIOR SECONDARY SCHOOL <br/> PEELLAWATHTHA <br/> ANDIAMBALAMA </h4>
 					<p class="lead">
-						<a class="btn btn-primary btn-lg mt-5" href="{{ app.url }}/themes/{{ app.theme }}/user/login.html" role="button">Login Panel</a>
+						<a class="btn btn-primary btn-lg mt-5" href="user/login" role="button">Login Panel</a>
 					</p>
 				</div>
 
