--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -5,3 +5,18 @@
 {% for script in scripts %}
 	<script type="text/javascript" src="{{ script }}"></script>
 {% endfor  %}
+
+<section class="footer">
+	<div class="container-fluid ">
+		<div class="row">
+			<div class="col-md-auto mr-auto">
+					&copy; SCHMS 2019
+				</div>
+		
+				<div class="col-md-auto">
+					Developed by <i class="la la-code"></i> Lakmal Samarakkody
+				</div>
+		</div>
+		
+	</div>
+</section>
