--- a/themes/default/user/login.html
+++ b/themes/default/user/login.html
@@ -7,7 +7,7 @@
         <div class="row ">
             <div class="col-md-6">
                 <h1>School Management System</h1> <hr/>
-                <h2>David De Silva Secondary College</h2>
+                <h2>David De Silva Secondary School</h2>
             </div>
 
             <div class="col-md-4 offset-1">
