--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="{{ script }}"></script>
 {% endfor  %}
 
-<section class="footer">
+<!-- <section class="footer">
 	<div class="container-fluid ">
 		<div class="row">
 			<div class="col-md-auto mr-auto">
@@ -19,4 +19,4 @@
 		</div>
 		
 	</div>
-</section>
+</section> -->
