student,teacher,user pages linked

--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -6,17 +6,17 @@
 	<script type="text/javascript" src="{{ script }}"></script>
 {% endfor  %}
 
-<!-- <section class="footer">
+<section class="footer">
 	<div class="container-fluid ">
 		<div class="row">
 			<div class="col-md-auto mr-auto">
 					&copy; SCHMS 2019
 				</div>
 		
-				<div class="col-md-auto">
+				<!-- <div class="col-md-auto">
 					Developed by <i class="la la-code"></i> Lakmal Samarakkody
-				</div>
+				</div> -->
 		</div>
 		
 	</div>
-</section> -->
+</section>
