--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -16,8 +16,8 @@
                 </div>
             </div>
 
-            <div class="col-md-10 content">               
-                User overview
+            <div class="col-md-10 content">
+                Add new Student
             </div>
         </div>
     </div>
