--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col-md-10 content">               
-               Data
+               Home
             </div>
         </div>
     </div>
