--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -11,7 +11,7 @@
             </div>
 
             <div class="col-md-4 offset-1">
-                <form name="loginform" method="post" action="admin_panel">            
+                <form name="loginform" method="post" action="{{ app.url }}">            
                     <div class="form-group"> 
                         <input class="form-control" type="text" name="username" placeholder="Username"/>
                     </div>
