--- a/themes/default/teacher/index.html
+++ b/themes/default/teacher/index.html
@@ -17,7 +17,7 @@
             </div>
 
             <div class="col-md-10 content">               
-                User overview
+              teacher overview
             </div>
         </div>
     </div>
