--- a/themes/default/teacher/remove.html
+++ b/themes/default/teacher/remove.html
@@ -16,8 +16,8 @@
                 </div>
             </div>
 
-            <div class="col-md-10 content">               
-                User overview
+            <div class="col-md-10 content">
+                Delete teacher
             </div>
         </div>
     </div>
