student/add admission created

--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -10,12 +10,16 @@
 	<div class="container-fluid ">
 		<div class="row">
 			<div class="col-md-auto mr-auto">
-					&copy; SCHMS 2019
-				</div>
+				&copy; SCHMS 2019
+			</div>
+
+			<div class="col-md-auto">
+				David De Silva College - Minuwangoda
+			</div>
 		
-				<!-- <div class="col-md-auto">
-					Developed by <i class="la la-code"></i> Lakmal Samarakkody
-				</div> -->
+			<!-- <div class="col-md-auto">
+				Developed by <i class="la la-code"></i> Lakmal Samarakkody
+			</div> -->
 		</div>
 		
 	</div>
