--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>{{ app.title }}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="shortcut icon" type="image/x-icon" href="{{ app.url }}/themes/{{ app.theme }}/assets/img/fav.png" />
+	<link rel="shortcut icon" type="image/x-icon" href="{{ app.url }}/themes/{{ app.theme }}/assets/img/favicon.ico" />
 
 	<!-- LIBS : CSS / LA -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/libs/bts/css/bootstrap.min.css" />
