--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -7,7 +7,7 @@
         <div class="row ">
             <div class="col-md-6">
                 <h1>School Management System</h1> <hr/>
-                <h2>David De Silva Secondary School</h2>
+                <h2>David De Silva College &nbsp; Minuwangoda</h2>
             </div>
 
             <div class="col-md-4 offset-1">
@@ -17,10 +17,10 @@
                     </div>
             
                     <div class="form-group mt-3">
-                        <input class="form-control" type="password" name="password" placeholder="Password" />
+                        <input class="form-control" type="password" name="password" placeholder="Password"/>
                     </div>
                     
-                    <input class="btn btn-primary mt-5 pr-3" type="submit" name="login" value="Login" />
+                    <input class="btn btn-primary mt-5 pr-3" type="submit" name="login" value="Login"/>
                     <input class="btn btn-secondary mt-5" type="reset" name="reset" value=" Clear"/>
                 </form>
             </div>
