--- a/themes/default/user/search.html
+++ b/themes/default/user/search.html
@@ -7,8 +7,8 @@
             
             {{ template.sidenav|raw }}
 
-            <div class="col-md-10 content">               
-                User overview
+            <div class="col-md-10 content">
+                search User
             </div>
             
         </div>
