main menu items added

--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -21,33 +21,35 @@
                             <div id="collapseAdmission" class="collapse show" aria-labelledby="headingAdmission" data-parent="#accordionAdmission">
                                 <div class="card-body">
 
-                                        <div class="form-group">
-                                            <label for="adddate">Admission Date</label>
-                                            <input type="date" class="form-control" id="adddate" required/>
-                                            <small id="adddateHelp" class="form-text text-muted">If unchanged todate will be submitted</small>
-                                        </div>
-
-                                        <div class="form-group">
+                                    <div class="form-row">                                        
+                                        <div class="form-group col-md-4 mr-auto">
                                             <label for="addno">Admission Number</label>
                                             <input type="number" class="form-control" id="addno" required/>
                                             <small id="addnolHelp" class="form-text text-muted">will assigned Automatically</small>
                                         </div>
 
-                                        <div class="form-group">
-                                            <label for="class">Class</label>
-                                            <input type="text" class="form-control" id="class" required/>
-                                        </div>
+                                        <div class="form-group col-md-4 ml-auto">
+                                            <label for="adddate">Admission Date</label>
+                                            <input type="date" class="form-control" id="adddate" required/>
+                                            <small id="adddateHelp" class="form-text text-muted">If unchanged todate will be submitted</small>
+                                        </div>                                 
+                                    </div>
 
-                                        <div class="form-group">
-                                            <label for="sub">Subjects</label>
-                                            <input type="text" class="form-control" id="sub" required/>
-                                        </div>
+                                    <div class="form-group">
+                                        <label for="class">Class</label>
+                                        <input type="text" class="form-control" id="class" required/>
+                                    </div>
 
-                                        <div class="form-group">
-                                            <label for="cat">Category</label>
-                                            <input type="text" class="form-control" id="cat" required/>
-                                            <small id="catHelp" class="form-text text-muted">Health reports should be submitted</small>
-                                        </div>
+                                    <div class="form-group">
+                                        <label for="sub">Subjects</label>
+                                        <input type="text" class="form-control" id="sub" required/>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <label for="cat">Category</label>
+                                        <input type="text" class="form-control" id="cat" required/>
+                                        <small id="catHelp" class="form-text text-muted">Health reports should be submitted</small>
+                                    </div>
                                 </div>
                             </div>
 
