--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -8,7 +8,7 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">               
-               Home
+                {{ template.topmenu|raw }}
             </div>
         </div>
     </div>
