search page modified

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -54,7 +54,7 @@
                 </li>
 
                 <li class="main-menu" id="progress">
-                    <a href="{{ app.url }}"><i class="la la-area-chart"></i><span class="">&nbsp;Progress Report</span></a>
+                    <a href="{{ app.url }}"><i class="la la-area-chart"></i><span class="">&nbsp;Progress Reports</span></a>
                 </li>
 
                 <li class="main-menu" id="sports">
@@ -62,7 +62,7 @@
                 </li>
 
                 <li class="main-menu" id="health">
-                    <a href="{{ app.url }}"><i class="la la-heartbeat"></i><span class="">&nbsp;Health Report</span></a>
+                    <a href="{{ app.url }}"><i class="la la-heartbeat"></i><span class="">&nbsp;Health Reports</span></a>
                 </li>
 
                 <li class="main-menu" id="parents">
