--- a/themes/default/student/edit.html
+++ b/themes/default/student/edit.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Edit Student
+                
+                {{ template.topmenu|raw }}
+
+                <div class="stuedit">
+                    edit student
+                </div>
             </div>
             
         </div>
