--- a/themes/default/teacher/edit.html
+++ b/themes/default/teacher/edit.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Edit teacher
+                
+                {{ template.topmenu|raw }}
+
+                <div class="teacheredit">
+                    edit teacher
+                </div>
             </div>
             
         </div>
