--- a/themes/default/teacher/remove.html
+++ b/themes/default/teacher/remove.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Delete teacher
+                
+                {{ template.topmenu|raw }}
+
+                <div class="teacherremove">
+                    remove teacher
+                </div>
             </div>
             
         </div>
