--- a/themes/default/teacher/search.html
+++ b/themes/default/teacher/search.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                search teacher
+                
+                {{ template.topmenu|raw }}
+
+                <div class="teachersearch">
+                    search teacher
+                </div>
             </div>
             
         </div>
