--- a/themes/default/user/edit.html
+++ b/themes/default/user/edit.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Edit user
+                
+                {{ template.topmenu|raw }}
+
+                <div class="useredit">
+                    edit user
+                </div>
             </div>
             
         </div>
