--- a/themes/default/user/remove.html
+++ b/themes/default/user/remove.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Delete User
+                
+                {{ template.topmenu|raw }}
+
+                <div class="userremove">
+                    remove user
+                </div>
             </div>
             
         </div>
