--- a/themes/default/student/remove.html
+++ b/themes/default/student/remove.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                Delete Student
+                
+                {{ template.topmenu|raw }}
+
+                <div class="sturemove">
+                    remove student
+                </div>
             </div>
             
         </div>
