--- a/themes/default/user/search.html
+++ b/themes/default/user/search.html
@@ -8,7 +8,12 @@
             {{ template.sidenav|raw }}
 
             <div class="col-md-10 content">
-                search User
+                
+                {{ template.topmenu|raw }}
+
+                <div class="usersearch">
+                    search user
+                </div>
             </div>
             
         </div>
