teacher module changed as staff

--- a/themes/default/staff/add.html
+++ b/themes/default/staff/add.html
@@ -11,7 +11,7 @@
 
                 {{ template.topmenu|raw }}
 
-                <div class="teacheradd">
+                <div class="staffadd">
 
                     <form name="empadmission" method="POST" action="#">
                         <div id="accordionAdmission">
@@ -44,6 +44,11 @@
                                             <div class="form-group">
                                                 <label for="class">Class incharge</label>
                                                 <input type="text" class="form-control" id="class"/>
+                                            </div>
+
+                                            <div class="form-group">
+                                                <label for="type">Type</label>
+                                                <input type="text" class="form-control" id="type" required/>
                                             </div>
     
                                             <div class="form-group">
