--- a/themes/default/staff/edit.html
+++ b/themes/default/staff/edit.html
@@ -11,8 +11,8 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="teacherindex">
-                    teacher overview
+                <div class="staffedit">
+                    edit staff
                 </div>
             </div>
             
