--- a/themes/default/staff/index.html
+++ b/themes/default/staff/index.html
@@ -11,8 +11,8 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="teacherremove">
-                    remove teacher
+                <div class="staffindex">
+                    staff overview
                 </div>
             </div>
             
