--- a/themes/default/staff/remove.html
+++ b/themes/default/staff/remove.html
@@ -11,8 +11,8 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="teachersearch">
-                    search teacher
+                <div class="staffremove">
+                    remove staff
                 </div>
             </div>
             
