--- a/themes/default/staff/search.html
+++ b/themes/default/staff/search.html
@@ -11,8 +11,8 @@
                 
                 {{ template.topmenu|raw }}
 
-                <div class="teacheredit">
-                    edit teacher
+                <div class="staffsearch">
+                    search staff
                 </div>
             </div>
             
