--- a/themes/default/user/add.html
+++ b/themes/default/user/add.html
@@ -27,6 +27,11 @@
                                         <label for="role">User Role</label>
                                         <select class="form-control" id="role" required></select>
                                     </div>
+
+                                    <div class="form-group col-md-4 ml-auto">
+                                        <label for="empno">Emp ID</label>
+                                        <input type="number" class="form-control" id="empno" required></select>
+                                    </div>
                                 </div>                            
     
                                 <div class="form-group col-md-6 mx-auto">
