--- a/themes/default/staff/add.html
+++ b/themes/default/staff/add.html
@@ -37,6 +37,11 @@
                                             </div>
 
                                             <div class="form-group">
+                                                <label for="nicno">NIC</label>
+                                                <input type="number" class="form-control" id="nicno" required/>
+                                            </div>
+
+                                            <div class="form-group">
                                                 <label for="sub">Subjects</label>
                                                 <input type="text" class="form-control" id="sub" required/>
                                             </div>
@@ -116,11 +121,6 @@
                                         <div class="form-group">
                                             <label for="dist">District</label>
                                             <input type="text" class="form-control" id="dist" required/>
-                                        </div>
-    
-                                        <div class="form-group">
-                                            <label for="bp">Birth Place</label>
-                                            <input type="text" class="form-control" id="bp"/>
                                         </div>
     
                                         <div class="form-group">
