--- a/themes/default/staff/add.html
+++ b/themes/default/staff/add.html
@@ -122,6 +122,11 @@
                                             <label for="dist">District</label>
                                             <input type="text" class="form-control" id="dist" required/>
                                         </div>
+
+                                        <div class="form-group">
+                                            <label for="province">Province</label>
+                                            <input type="text" class="form-control" id="province" disabled/>
+                                        </div>
     
                                         <div class="form-group">
                                             <label for="bg">Blood Group</label>
