added user model

--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -20,7 +20,8 @@
                         <input class="form-control" type="password" name="password" placeholder="Password"/>
                     </div>
                     
-                    <input class="btn btn-primary mt-5 pr-3" type="submit" name="login" value="Login"/>
+                    <input type="hidden" name="is_submit" value="true"/>
+                    <button class="btn btn-primary mt-5 pr-3"type="submit">Login</button>
                     <input class="btn btn-secondary mt-5" type="reset" name="reset" value=" Clear"/>
                 </form>
             </div>
