--- a/themes/default/common/topmenu.html
+++ b/themes/default/common/topmenu.html
@@ -14,7 +14,7 @@
                 
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">My Profile</a>
-                    <a class="dropdown-item" href="#">Logout</a>
+                    <a class="dropdown-item" href="{{ app.url }}/logout">Logout</a>
                 </div>
 
        
