--- a/themes/default/login/index.html
+++ b/themes/default/login/index.html
@@ -5,18 +5,14 @@
 <div class="container-fluid login"> 
     <div class="container">
         <div class="row ">
-            <div class="col-md-6">
+            <div class="col-md-6 title">
                 <h1>School Management System</h1> <hr/>
                 <h2>David De Silva College &nbsp; Minuwangoda</h2>
             </div>
 
-            <div class="col-md-4 offset-1">
+            <div class="col-md-4 offset-1 loginform">
 
-                {% if msg %}
-                <div class="alert alert-danger">{{ msg }}</div>
-                {% endif %}
-
-                <form method="post" action="">
+                <form method="post">
 
                     <div class="form-group"> 
                         <input class="form-control" type="text" name="username" placeholder="Username"/>
@@ -25,10 +21,16 @@
                     <div class="form-group mt-3">
                         <input class="form-control" type="password" name="password" placeholder="Password"/>
                     </div>
+
+                    {% if msg %}
+                        <div class="alert alert-danger">{{ msg }}</div>
+                    {% endif %}
                     
                     <input type="hidden" name="is_submit" value="true"/>
-                    <button class="btn btn-primary mt-5 pr-3"type="submit">Login</button>
+                    <button class="btn btn-primary mt-5 pr-3" type="submit">Login</button>
                     <input class="btn btn-secondary mt-5" type="reset" name="reset" value="Clear"/>
+
+                   
 
                 </form>
             </div>
