Student/Staff add and search UI completed

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -42,6 +42,10 @@
                     <a href="{{ app.url }}"><i class="la la-file-text"></i><span class="">&nbsp;Exam Schedule</span></a>
                 </li>
 
+                <li class="main-menu" id="timetable">
+                    <a href="{{ app.url }}"><i class="la la-file-text"></i><span class="">&nbsp;Time table</span></a>
+                </li>
+
                 <li class="main-menu" id="results">
                     <a href="{{ app.url }}"><i class="la la-certificate"></i><span class="">&nbsp;Results</span></a>
                 </li>
@@ -73,7 +77,7 @@
                         </li>
 
                         <li class="sub-menu">
-                            <a href="{{ app.url }}/staffsearch"><i class="la la-search"></i><span>&nbsp;Search</span></a>
+                            <a href="{{ app.url }}/staff/search"><i class="la la-search"></i><span>&nbsp;Search</span></a>
                         </li>
                         
                         <li class="sub-menu">
