attendance,student basic over

--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -369,8 +369,8 @@
                             </div>
                         </div>
     
-                        <input type="submit" class="btn btn-outline-primary" value="Register" />
-                        <input type="reset" class="btn btn-outline-secondary" value="Clear" />
+                        <button type="submit" class="btn btn-outline-primary"> Register </button>
+                        <button type="reset" class="btn btn-outline-secondary"> Clear </button>
     
                     </form>
 
