exam schdule basic over

--- a/themes/default/student/index.html
+++ b/themes/default/student/index.html
@@ -72,18 +72,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="card-header">
-                                    Upcoming exams
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">GCE O/L 2019</h5>
-                                    <p class="card-text"> starts on 05 Dec 2019 <br/> ends on 25 Dec 2019 </p>
-                                    <a href="#" class="badge badge-primary">view details</a>
-                                </div>
-                            </div>
-                        </div>
+                        <div class="col-md-8"></div>
                        
                     </div>
 
