--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -40,7 +40,7 @@
                             
                             <div class="form-row">
                                 <div class="form-group ml-auto mr-1">
-                                    <button class="btn btn-outline-primary" type="submit"> Go </button>
+                                    <button class="btn btn-primary" type="submit"> Go </button>
                                 </div>
                             </div>
                         </form>
