--- a/themes/default/exam/index.html
+++ b/themes/default/exam/index.html
@@ -15,6 +15,42 @@
 
                     <h4 class="page-title"> Exam Overview</h4>
 
+                    <section class="upcomingexam mt-5">
+                        <div class="row">
+
+                            <div class="card col p-0">
+                                <div class="card-header">
+                                    Upcoming exams
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">GCE O/L 2019</h5>
+                                    <p class="card-text"> from 05 Dec 2019 to 25 Dec 2019 </p>
+                                    <a href="#" class="badge badge-primary">view details</a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </section>
+
+                    <section class="recentexam mt-4">
+                        <div class="row">
+
+                            <div class="card col p-0">
+                                <div class="card-header">
+                                    Recent exams
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">GCE O/L 2019</h5>
+                                    <p class="card-text"> from 05 Dec 2019 to 25 Dec 2019 </p>
+                                    <a href="#" class="badge badge-primary">view details</a>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </section>
+
                 </div>
             </div>
             
