--- a/themes/default/student/add.html
+++ b/themes/default/student/add.html
@@ -369,8 +369,8 @@
                             </div>
                         </div>
     
-                        <button type="submit" class="btn btn-outline-primary"> Register </button>
-                        <button type="reset" class="btn btn-outline-secondary"> Clear </button>
+                        <button type="submit" class="btn btn-primary"> Register </button>
+                        <button type="reset" class="btn btn-secondary"> Clear </button>
     
                     </form>
 
