--- a/themes/default/user/search.html
+++ b/themes/default/user/search.html
@@ -53,7 +53,7 @@
 
                             </div>
 
-                            <button class="btn btn-outline-primary" type="submit"> Search </button>   
+                            <button class="btn btn-primary" type="submit"> Search </button>   
 
                         </form>
     
