--- a/themes/default/attendance/search.html
+++ b/themes/default/attendance/search.html
@@ -36,13 +36,13 @@
                                     <select class="form-control" id="status" required></select>
                                 </div>
 
-                                <div class="form-group col-md-2">
-                                    <label for="datefrom">Date From</label>
+                                <div class="form-group mr-2">
+                                    <label for="datefrom">From</label>
                                     <input type="date" class="form-control" id="datefrom" required/>
                                 </div>
 
-                                <div class="form-group col-md-2">
-                                    <label for="dateto">Date To</label>
+                                <div class="form-group">
+                                    <label for="dateto">To</label>
                                     <input type="date" class="form-control" id="dateto" required/>
                                 </div>
 
