--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -39,7 +39,7 @@
                                 <select class="form-control" id="subject" required></select>
                             </div>
 
-                            <div class="form-group col-md-2">
+                            <div class="form-group">
                                 <label for="date"> Date </label>
                                 <input type="date" class="form-control" id="date" required></select>
                             </div>
