--- a/themes/default/timetable/index.html
+++ b/themes/default/timetable/index.html
@@ -105,18 +105,18 @@
                                     <input type="text" class="form-control" id="fn"/>
                                 </div>
 
-                                <div class="form-group col-md-2 ml-auto">
-                                    <label for="date"> Date </label>
-                                    <input type="date" class="form-control" id="date"></select>
-                                </div>
-
-                                <div class="form-group col-md-1">
+                                <div class="form-group col-md-1 mr-1 ml-auto">
                                     <label for="day"> Day </label>
                                     <select class="form-control" id="day"></select>
                                 </div>
 
+                                <div class="form-group mr-2">
+                                    <label for="date"> Date </label>
+                                    <input type="date" class="form-control" id="date"></select>
+                                </div>
+
                                 <div class="form-group col-md-1 p-0">
-                                    <label for="staffclass"> Select TIC Class </label>
+                                    <label for="staffclass"> Class </label>
                                     <select class="form-control" id="staffclass"></select>
                                 </div>
                             </div>
