--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -9,6 +9,10 @@
 
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
+
+                <div class="homeindex">
+                    dashboard
+                </div>
             </div>
         </div>
     </div>
