user index started

--- a/themes/default/attendance/mark.html
+++ b/themes/default/attendance/mark.html
@@ -21,17 +21,22 @@
 
                             <div class="form-row">
 
-                                <div class="form-group col-md-2">
-                                    <label for="addno">Admission / Emp ID</label>
-                                    <input type="number" class="form-control" id="addno" required/>
-                                </div>
-
                                 <div class="form-group col-md-1">
-                                    <label for="view">Select View</label>
-                                    <select class="form-control" id="view" required></select>
+                                    <label for="addno">ID</label>
+                                    <input type="number" class="form-control" id="addno"/>
                                 </div>
 
-                                <div class="form-group col-md-2 ml-auto">
+                                <div class="form-group col-md-2">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name"/>
+                                </div>
+
+                                <div class="form-group col-md-1 ml-auto">
+                                    <label for="view">Select View</label>
+                                    <select class="form-control" id="view"></select>
+                                </div>
+
+                                <div class="form-group">
                                     <label for="date">Select Date</label>
                                     <input type="date" class="form-control" id="date" required/>
                                 </div>
