--- a/themes/default/timetable/create.html
+++ b/themes/default/timetable/create.html
@@ -47,10 +47,10 @@
 
                     </section>
 
-                    <h4 class="page-title"> Create Time Table </h4>
-
                     <!-- START : CLASS TIME TABLE -->
-                    <div class="timetable">
+                    <section class="timetable mt-4">
+
+                        <h4 class="page-title"> Create Time Table </h4>
 
                         <table class="table table-hover">
 
@@ -91,10 +91,11 @@
 
                         </table>
 
-                    </div>
+                    </section>
                     <!-- END : CLASS TIME TABLE -->
 
                 </div>
+                
             </div>
             
         </div>
