result add UI over

--- a/themes/default/common/sidenav.html
+++ b/themes/default/common/sidenav.html
@@ -120,7 +120,7 @@
                 </li>
 
                 <li class="main-menu">
-                    <div class="col-md-9"><a href="{{ app.url }}"><i class="la la-heartbeat"></i><span>&nbsp;Health Report</span></a></div>
+                    <div class="col-md-9"><a href="{{ app.url }}"><i class="la la-heartbeat"></i><span>&nbsp;Health Record</span></a></div>
                 </li>
 
                 <li class="main-menu">
