--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -108,7 +108,7 @@
                             
                             <div class="form-row">
                                 <div class="form-group ml-auto">
-                                    <button type="submit" class="btn btn-success"> Create exam </button>
+                                    <button type="submit" class="btn btn-primary"> Create exam </button>
                                 </div>
                             </div>
 
@@ -171,7 +171,7 @@
                             </div>
 
                             <div class="form-group ml-auto">
-                                <button type="submit" class="btn btn-success"> Add Schedule </button>
+                                <button type="submit" class="btn btn-primary"> Add Schedule </button>
                             </div>
 
                         </form>
