--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -48,7 +48,7 @@
 
                         <div class="form-row">
                             <div class="form-group ml-auto mr-1">
-                                <button type="submit" class="btn btn-success"> Search Exam Schedule </button>
+                                <button type="submit" class="btn btn-primary"> Search Exam Schedule </button>
                             </div>
                         </div>
 
