--- a/themes/default/result/search.html
+++ b/themes/default/result/search.html
@@ -10,14 +10,14 @@
             <div class="col-md-10 content">               
                 {{ template.topmenu|raw }}
 
-                <div class="resultadd">
+                <div class="resultsearch">
 
-                    <h4 class="page-title"> Add / Edit Exam Result </h4>
+                    <h4 class="page-title"> View Exam Result </h4>
 
                     <!-- START : SEARCH EXAM -->
-                    <section class="addresult-filter mt-4">
+                    <section class="searchresult-filter mt-4">
 
-                        <form name="addresult-form">
+                        <form name="searchresult-form">
 
                             <div class="form-row">
     
@@ -71,7 +71,7 @@
                                     <th scope="col"> Class </th>
                                     <th scope="col"> Exam Name </th>
                                     <th scope="col"> Year </th>
-                                    <th scope="col"> Result Status </th>
+                                    <th scope="col"> Subject name </th>
                                 </thead>
 
                                 <tbody>
