--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -13,16 +13,13 @@
 
                 <div class="stusearch">
 
-                    <h4 class="page-title">Search Attendance</h4>
-
-                    <!-- <div class="stusearchheading">
-                        <h4>Student Search</h4>
-                    </div> -->
+                    <h4 class="page-title">Search Student</h4>
 
                     <div class="stusearchfilter">
                         <form>
 
                             <div class="form-row">
+
                                 <div class="form-group col-md-2">
                                     <label for="addno">Admission Number</label>
                                     <input type="number" class="form-control" id="addno" required/>
@@ -41,9 +38,10 @@
                                 </div>
 
                                 <div class="form-group col-md-6">
-                                    <label for="fn">Name</label>
-                                    <input type="text" class="form-control" id="fn" required/>
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name" required/>
                                 </div>
+
                             </div>
 
                             
