parent search UI changed

--- a/themes/default/home/index.html
+++ b/themes/default/home/index.html
@@ -11,7 +11,9 @@
                 {{ template.topmenu|raw }}
 
                 <div class="homeindex">
-                    dashboard
+
+                    <h4 class="page-title"> Dashboard </h4>
+
                 </div>
             </div>
         </div>
