--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -38,8 +38,8 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"> Close </button>
-                                <button type="button" class="btn btn-outline-primary"> Save changes </button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
+                                <button type="button" class="btn btn-primary"> Save changes </button>
                             </div>
                         </div>
                     </div>
@@ -63,8 +63,8 @@
                             </div>
 
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-outline-secondary" data-dismiss="modal"> Close </button>
-                                <button type="button" class="btn btn-outline-danger"> Save changes </button>
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close </button>
+                                <button type="button" class="btn btn-danger"> Save changes </button>
                             </div>
                         </div>
                     </div>
